<resources>
    <string name="app_name">MVHR Bypass</string>

<!--    Messages-->
    <string name="message_connection_failed">Connection failed</string>
    <string name="message_connection_busy">Connection busy</string>
    <string name="message_connection_closed">Connection closed</string>

<!--    Connect Fragment -->
    <string name="connect_fragment_title">Connect</string>
    <string name="ip_address">IP Address</string>
    <string name="connect">Connect</string>
    <string name="version_name">v%s</string>

<!--    Main Fragment-->
    <string name="mode_auto">AUTO</string>
    <string name="mode_manual">MANUAL</string>
    <string name="exterior">EXT</string>
    <string name="interior">INT</string>
    <string name="admission">AD</string>
    <string name="evacuation">EV</string>
    <string name="table_temp_format">%.1f</string>
    <string name="table_temp_error">ERR</string>
    <string name="interior_evacuation">INT EV</string>
    <string name="exterior_admission">EXT AD</string>
    <string name="hysteresis">HYSTERESIS: ±%1$.1f</string>

</resources>